--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -2,22 +2,45 @@
 %section#banner
   .container
     .row
-      .medium-8.columns
-        %p.lead
+      .medium-12.columns
+        %p.lead.text-center
           Join our weekly workshops in #{link_to "London", chapter_url("london")},  #{link_to "Brighton", chapter_url("brighton")} and #{link_to "Cambridge", chapter_url("cambridge")} to get to grips with the basics of programming and web development.
-      .medium-offset-1.medium-3.columns
+    %br
+    .row
+      .medium-offset-2.medium-4.columns
         =link_to "Sign up as a student", new_member_path(role:"student"), class: 'button round expand'
+      .medium-4.columns
         =link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button round expand'
+%br
+
+%section.testimonials
+  .row
+    .large-12.columns
+      %ul{ "data-orbit" => true, "data-options" => " animation:fade;timer_speed:10000;next_on_click:false;bullets:false;slide_number:false;circular:true;navigation_arrows:false;pause_on_hover:false;" }
+        %li{ "data-orbit-slide" => "headline-1" }
+          %blockquote
+            %p I have benefitted from learning how to code in so many ways, not only in breaking things down and thinking them through logically but also through creating interesting projects and realising the potential of what is possible through writing good code.
+            %cite Priya Patil
+
+        %li{ "data-orbit-slide" => "headline-2" }
+          %blockquote
+            %p I started attending Codebar to learn how to code an idea I had, but I ended up learning more than just the basics! I built my initial prototype in just a few weeks and have progressed far more than I thought I could. The best part about the workshops are the coaches, they are very patient and help you understand difficult concepts. Attending the weekly workshops has now given me the confidence to code any idea into a prototype – something I didn’t think I could do a year ago! Learning to code is an excellent skill to add to your repertoire and it enhances any career path. I would highly recommend Codebar to anyone, especially if you come from a non-technical background like me!
+            %cite Harini Manivannan
+        %li{ "data-orbit-slide" => "headline-3" }
+          %blockquote
+            %p Codebar is awesome! The atmosphere is excellent - everyone is really friendly and the coaches really want to help in any way they can. Coding alone in your room isn't great for when you get stuck and so meeting other coders at Codebar made me realise that others were struggling with the same problems that I was. This really helped boost my confidence, which is vital when learning a new subject. Thoroughly recommended.
+            %cite Nishita
 
 
 %section#chapter
   .events
     .row
-      %hr
       .large-7.columns
+        %h4 Events
+        %hr
         - if @upcoming_workshops.empty?
           %p
-            There are no upcoming workshops.
+            There are no upcoming events.
           %p
             =link_to "View past events", events_url(anchor: 'past'), class: "button round expand"
 
@@ -31,10 +54,15 @@
           !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
 
   .row
-    %hr
     .large-12.columns
-      %h4 Sponsors
+      %h4
+        Latest Sponsors
+        %small.subheader
+          = link_to "View all", sponsors_path
+      %hr
+
       %ul.small-block-grid-2.medium-block-grid-4.large-block-grid-5#sponsors
         - @sponsors.each do |sponsor|
           %li
             = link_to image_tag(sponsor.avatar, class: "sponsor-logo", alt: sponsor.name), sponsor.website
+  %br
