--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1313,7 +1313,7 @@ blockquote p {
   line-height: 1.3em;
 }
 
-.button.alert {
+.button.alert, .button.success {
   color: #fff;
   &:hover {
     color: #fff;
