--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -4,6 +4,9 @@
       .large-8.columns
         =link_to admin_member_path(invitation.member) do
           =invitation.member.full_name
+        - if invitation.member.newbie?
+          %p
+            %em New attendee!
         %p=invitation.note
         - if invitation.reminded_at.present?
           %small  reminder emailed at #{l(invitation.reminded_at)}
