--- a/app/views/session_invitation_mailer/reminder.html.haml
+++ b/app/views/session_invitation_mailer/reminder.html.haml
@@ -29,7 +29,7 @@
                   #{@session.host.name}
                   %br
                   #{@host_address.to_html}
-                = link_to "See who will be there and update you attendance", full_url_for(invitation_url(@invitation)), class: 'btn'
+                = link_to "See who will be there and update your attendance", full_url_for(invitation_url(@invitation)), class: 'btn'
 
         .content
           %table
