--- a/app/views/member_mailer/welcome_coach.html.haml
+++ b/app/views/member_mailer/welcome_coach.html.haml
@@ -1,6 +1,9 @@
 %h1 Hi #{@member.name}!
 
-%p Welcome to Codebar. We're looking forward to seeing you at one of our events soon.
+%p
+  Welcome to Codebar. Thanks so much for volunteering - we rely on coaches
+  to make our workshops a success, and it really helps the students who attend.
+  We're looking forward to seeing you at one of our events soon.
 
 %p
   - if @member.subscriptions.any?
@@ -24,10 +27,12 @@
 
 %p
   Our workshops start with around 30 minutes of socialising and food, before we assign
-  you to a coach with one or two other students. You can either work through
+  you to coach one or two students. They'll either be working on
   = link_to "one of our tutorials", "http://tutorials.codebar.io/"
-  or get help with your own project. After 2 hours of coaching, we retire to a nearby
-  pub for some post-Codebar relaxation.
+  or looking for help with their own projects. Don't worry if you're not an expert on
+  the topics - your role is not about having all the answers! Guiding a student through
+  solving their own problem is more useful in the long run. There are more
+  =link_to "tips for coaching on the Codebar website.", teaching_guide_url
 
 %p
   It's important to us that our workshops are a welcoming &amp; accepting environment
@@ -41,7 +46,7 @@
   with anything on your mind.
 
 %p
-  We hope to see you at a workshop soon!
+  We hope to see you at a workshop soon, and thanks for volunteering!
 
 %p
   #{"-- "}
