update attendance policy copy

--- a/app/views/dashboard/attendance_policy.html.haml
+++ b/app/views/dashboard/attendance_policy.html.haml
@@ -3,16 +3,27 @@
 %section#banner
   .row
     .large-12.columns
-      %p We have a simple attendance policy in place, as our workshops have been getting busy and want to try to give everyone who can make it the opportunity to attend.
-      %ul
-        %li
-          To attend, you need to meet our
-          =link_to "eligibility criteria", "http://codebar.io/faq#attendance-eligibility"
-        %li
-          Only RSVP “yes” for events you can attend as by not attending:
-          %ul
-            %li you are taking someone else's spot
-            %li we will arrange more coaches than needed
-        %li If you fail to attend, without any communication, <b>three times</b>, we will stop sending you invitations for four weeks.
-        %li If this is repeated, it may result in you not being allowed to rejoin our events.
-        %li We can appreciate that something can come up last minute - it's never too late to let us know, just send an email to your local group.
+      %p
+        There’s high demand for our workshops and we have a waiting list on most weeks. To make sure as many people as possible can come, we have a straightforward attendance policy.
+        %ul
+          %li Before you RSVP make sure you are eligible to attend. If you’re not sure get in touch for a chat.
+          %li You must sign up and RSVP to attend our workshops.
+          %li If you RSVP then later realise you can’t make it, you must cancel. It only takes a few seconds to do through your confirmation email.
+          %li Please try to cancel with at least 24 hours notice.
+          %li We know that sometimes things come up last minute, but even if you only cancel an hour before the session, get in touch and let us know.
+
+      %h3
+        What happens if I don’t respect the policy?
+      %p
+        We operate a three strikes system. That means if you don’t come in without cancelling an RSVP three times, we will take you off our invite list for four weeks. We’ll get in touch after your first absence to make sure you understand this.
+      %p
+        If you fail to attend without cancelling another three times, we might have to remove you permanently from our invitation list.
+      %p
+        There is no penalty for RSVP-ing and then cancelling on a regular basis, but please avoid it. If you always struggle to make it in on a certain day then let us know – that kind of feedback is really important to us.
+      %h3
+        Another note on eligibility
+      %p
+        We’re a fairly relaxed bunch and we trust you, so we don’t police students as to their eligibility. However if it ever looks like this is being abused we may have to change that – which we really don’t want to do.
+      %p
+        So please remember what these workshops are for – to open up tech to people that are underrepresented in the industry.
+
