--- a/app/views/events/show.html.haml
+++ b/app/views/events/show.html.haml
@@ -8,13 +8,10 @@
 
   .row
     .large-10.columns
-      =link_to "#", class: 'button round disabled ' do
+      =link_to event_student_rsvp_path(@event), class: 'button round' do
         Get started with Open Source!
-      =link_to "#", class: 'button round disabled ' do
+      =link_to event_coach_rsvp_path(@event), class: 'button round' do
         Attend as a coach
-      %br
-      %small
-        %i Registrations for the event will be open from Thursday, the 4th of December at 12:00
       %br
       %br
 
@@ -44,26 +41,31 @@
       %a{ name: "faq" }
         %h2{ "data-magellan-destination" => "faq"}
           .text-center FAQ
-      %ul.small-block-grid-3
+      %ul.small-block-grid-1.medium-block-grid-3
         %li
           %small
             %b How experienced should I be to join the workshop?
           %p
             %small
-              You must have a general idea about programming and preferably to have already finished the #{link_to("HTML tutorials", "http://tutorials.codebar.io")} or a similar level of understanding and basic git knowledge.
+              You must have a general idea about programming and preferably to have already finished the #{link_to("HTML tutorials", "http://tutorials.codebar.io")} or have a similar level of understanding, and basic git knowledge.
         %li
           %small
-            %b Do I need to bring a laptop with me?
+            %b What kind of contributions can I make?
           %p
             %small
-              Yes, you should bring your laptop. If you don't one #{mail_to("24pullrequests@codebar.io", "send an email" )} so we can help you out!
+              Your contributions can be tiny, as simple as fixing a typo, to something incredible. You can help with documentation, fix a bug that you found, improve the copy, help with design or even tackle bigger tasks and help introduce new features. Every little helps!
         %li
           %small
-            %b How about a keyboard?
+            %b Do I need to bring a laptop?
           %p
             %small
-              You will spend the day pairing with someone, so a keyboard would be helpful.
-
+              Yes, you should bring a laptop. If you don't have one #{mail_to("24pullrequests@codebar.io", "send us an email" )} as we may be able to help.
+        %li
+          %small
+            %b Do I need to bring a keyboard?
+          %p
+            %small
+              A keyboard would help as you will spend the entire day pairing with someone on your latop. If you don't have a keyboard, #{mail_to("24pullrequests@codebar.io", "send us an email" )} and we'll try to organise something for you.
 
 
 %br
@@ -92,16 +94,34 @@
 .past__container
   .row
     .large-12.columns
-      %a{ name: "organisers" }
-        %h2{ "data-magellan-destination" => "organisers"}
-          .text-center Organisers
+      %a{ name: "coaches" }
+        %h2{ "data-magellan-destination" => "coaches"}
+          .text-center Coaches
       %br
-      - if @event.organisers.any?
-        %ul.small-block-grid-3
-          - @event.organisers.each do |organiser|
+      - if @event.verified_coaches.any?
+        %ul.small-block-grid-2.medium-block-grid-5
+          - @event.verified_coaches.each do |coach|
             %li.text-center
-              =link_to twitter_url_for(organiser.twitter) do
-                =image_tag organiser.avatar(56), class: 'th radius', title: organiser.full_name
+              =link_to twitter_url_for(coach.twitter) do
+                =image_tag coach.avatar(56), class: 'th radius', title: coach.full_name
                 %br
                 %br
-                = organiser.full_name
+                = coach.full_name
+  %br
+%br
+.row
+  .large-12.columns
+    %a{ name: "organisers" }
+      %h2{ "data-magellan-destination" => "organisers"}
+        .text-center Organisers
+    %br
+    - if @event.organisers.any?
+      %ul.small-block-grid-2.medium-block-grid-4
+        - @event.organisers.each do |organiser|
+          %li.text-center
+            =link_to twitter_url_for(organiser.twitter) do
+              =image_tag organiser.avatar(56), class: 'th radius', title: organiser.full_name
+              %br
+              %br
+              = organiser.full_name
+  %br
