add faq to event invitation page

--- a/app/views/invitations/show.html.haml
+++ b/app/views/invitations/show.html.haml
@@ -104,6 +104,13 @@
           %p
             %small
               A keyboard would help as you will spend the entire day pairing with someone on your latop. If you don't have a keyboard, #{mail_to("24pullrequests@codebar.io", "send us an email" )} and we'll try to organise something for you.
+        %li
+          %small
+            %b I will be commuting from Brighton/Cambrdige. Can you help with my travel expenses?
+          %p
+            %small
+              Yes, we can help by covering your travel costs. Make sure you fill in the questionnaire and we'll get in contact.
+
 
 
 %br
