First attempt to split the content into translation strings.

--- a/app/views/dashboard/sponsoring.html.haml
+++ b/app/views/dashboard/sponsoring.html.haml
@@ -1,4 +1,4 @@
-= render partial: 'shared/title', locals: { title: "Sponsoring", date: nil }
+= render partial: 'shared/title', locals: { title: t('sponsors.sponsoring'), date: nil }
 %section#banner
   .row
     .large-12.columns
