--- a/app/views/shared_mailers/_social.html.haml
+++ b/app/views/shared_mailers/_social.html.haml
@@ -16,7 +16,7 @@
       %table.column{ align: "left" }
         %tr
           %td
-            %h5 Contact Info:
+            %h5=t("footer.contact_info")
             %p Email: <strong><a href="emailto:hello@codebar.io">hello@codebar.io</a></strong>
 
       %span.clear
