--- a/app/views/events/_event.html.haml
+++ b/app/views/events/_event.html.haml
@@ -15,7 +15,7 @@
       %small= event.description
       - if event.venue.present?
         %br
-        Kindly hosted by
+        = t("kindly_hosted_by")
         = link_to event.venue.name, event.venue.website
         %br
         = AddressDecorator.decorate(event.venue.address).to_html
@@ -25,7 +25,7 @@
           = image_tag sponsor.avatar, class: 'sponsor'
       - if event.organisers.any?
         .organisers
-          %small organisers
+          %small= t("organisers")
           %br
           - event.organisers.each do |organiser|
             =link_to twitter_url_for(organiser.twitter) do
