Fixes translation strings.

--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -13,5 +13,5 @@
       %p
         = t('members.new.invitations')
       = link_to registration_path, class: "button round" do
-        = t('sign_in_with_github')
+        = t('members.sign_in_with_github')
         %i.fa.fa-github.fa-fw
