--- a/app/views/members/new.html.haml
+++ b/app/views/members/new.html.haml
@@ -8,7 +8,7 @@
         \.
       %p
         = t('members.new.students.intro')
-        = link_to t('members.new.students.eligibility_criteria'), faq_path(anchor: "attendance-eligibility")
+        = link_to t('members.new.students.criteria_link'), faq_path(anchor: "attendance-eligibility")
         = t('members.new.students.criteria_brief')
       %p
         = t('members.new.invitations')
