--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -49,21 +49,26 @@
 
 
 
-      - if @workshop.past?
-        .medium-offset-1.medium-3.sign-up.past.columns
-          This workshop was held in the past, so you can't sign up to it.
-      - else
-        .medium-offset-1.medium-3.sign-up.columns
+      .medium-offset-1.medium-3.sign-up.columns
+        - if @workshop.past?
+          This workshop was held in the past, but you can sign up to receive invites to our future events.
+        - else
           - if @workshop.spaces?
             Come along and join us!
           - else
             This workshop is full, but you can join the waiting list.
+
+        - if logged_in?
           - if @workshop.student_spaces?
-            = link_to "Sign up as a student", new_member_path(role:"student"), class: 'button round expand'
+            = link_to "Attend as a student", add_workshop_path, class: 'button round expand'
           - else
-            = link_to "Join the student waiting list", new_member_path(role:"student"), class: 'button round expand'
+            = link_to "Join the student waiting list", add_workshop_path, class: 'button round expand'
 
           - if @workshop.coach_spaces?
-            = link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button round expand'
+            = link_to "Attend as a coach", add_workshop_path, class: 'button round expand'
           - else
-            = link_to "Join the coach waiting list", new_member_path(role: "coach"), class: 'button round expand'
+            = link_to "Join the coach waiting list", add_workshop_path, class: 'button round expand'
+        - else
+          = link_to "Sign up as a student", new_member_path(role: "student"), class: 'button round expand'
+          = link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button round expand'
+          = link_to "Log in with existing account", "/auth/github", class: 'button round expand'#", class: 'button round expand'#", class: 'button round expand'
