--- a/app/views/workshops/show.html.haml
+++ b/app/views/workshops/show.html.haml
@@ -59,15 +59,19 @@
             This workshop is full, but you can join the waiting list.
 
         - if logged_in?
-          - if @workshop.student_spaces?
-            = link_to "Attend as a student", add_workshop_path, class: 'button round expand'
-          - else
-            = link_to "Join the student waiting list", add_workshop_path, class: 'button round expand'
+          = form_tag add_workshop_path, method: :post do
+            = hidden_field_tag :role, :student
+            - if @workshop.student_spaces?
+              = submit_tag "Attend as a student", class: 'button round expand'
+            - else
+              = submit_tag "Join the student waiting list", class: 'button round expand'
 
-          - if @workshop.coach_spaces?
-            = link_to "Attend as a coach", add_workshop_path, class: 'button round expand'
-          - else
-            = link_to "Join the coach waiting list", add_workshop_path, class: 'button round expand'
+          = form_tag add_workshop_path, method: :post do
+            = hidden_field_tag :role, :coach
+            - if @workshop.coach_spaces?
+              = submit_tag "Attend as a coach", class: 'button round expand'
+            - else
+              = submit_tag "Join the coach waiting list", class: 'button round expand'
         - else
           = link_to "Sign up as a student", new_member_path(role: "student"), class: 'button round expand'
           = link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button round expand'
