--- a/app/views/events/_faq.html.haml
+++ b/app/views/events/_faq.html.haml
@@ -25,7 +25,7 @@
         A keyboard would help as you will spend the entire day pairing with someone on your latop. If you don't have a keyboard, #{mail_to("24pullrequests@codebar.io", "send us an email" )} and we'll try to organise something for you.
   %li
     %small
-      %b I will be commuting from Brighton/Cambrdige. Can you help with my travel expenses?
+      %b I will be commuting from Brighton/Cambridge. Can you help with my travel expenses?
     %p
       %small
         Yes, we can help by covering your travel costs. Make sure you fill in the questionnaire and we'll get in touch.
