--- a/app/views/workshops/removed.html.haml
+++ b/app/views/workshops/removed.html.haml
@@ -12,4 +12,6 @@
           Even though you can't make it to this Codebar, we're looking forward to seeing you at another Codebar soon!
           = link_to "Drop us an email", "mailto:hello@codebar.io"
           if you have any questions.
+        %p
+          = link_to "« Return to the workshop page", workshop_path(@workshop)
 
