Add links back to the workshop from the added/removed/waitlisted pages; make sure that we display coach/student specific messages on the added/waitlisted pages.

--- a/app/views/workshops/added.html.haml
+++ b/app/views/workshops/added.html.haml
@@ -17,3 +17,6 @@
           We're looking forward to seeing you at Codebar soon!
           = link_to "Drop us an email", "mailto:hello@codebar.io"
           if you have any questions.
+        %p
+          = link_to "« Return to the workshop page", workshop_path(@workshop)
+
