--- a/app/views/workshops/waitlisted.html.haml
+++ b/app/views/workshops/waitlisted.html.haml
@@ -13,9 +13,12 @@
         - if @coach
           %p As a coach, you don't need to bring anything except patience and a willingness to teach. It can be handy to have a notebok and pen, though.
         - else
-          %p You'll need to bring your laptop with you, but you shouldn't need anything else.
+          %p As a student, you'll need to bring your laptop with you, but you shouldn't need anything else.
 
         %p
           We hope to see you at Codebar soon!
           = link_to "Drop us an email", "mailto:hello@codebar.io"
           if you have any questions.
+        %p
+          = link_to "« Return to the workshop page", workshop_path(@workshop)
+
