Add a Google map to the workshop page; tweak the layout a bit to accommodate the map.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -89,6 +89,11 @@ nav a.menu {
 
 .exposition {
   font-size: 0.8rem;
+  margin-bottom: 3rem;
+}
+
+.row.people-and-place {
+  margin-bottom: 3rem;
 }
 
 .sponsors {
