Added not about removing from calendar not cancelling the invitation RSVP.

--- a/app/views/event_invitation_mailer/attending.html.haml
+++ b/app/views/event_invitation_mailer/attending.html.haml
@@ -18,6 +18,9 @@
                   Your spot for the #{@event.name} event has been verified.
 
                 %p
+                  Please remember that removing the calendar entry will not cancel your invitation RSVP.
+
+                %p
                   See you at the event!
 
 
