--- a/app/views/session_invitation_mailer/attending.html.haml
+++ b/app/views/session_invitation_mailer/attending.html.haml
@@ -19,6 +19,10 @@
                   - else
                     Thank you for confirming you attendance.
                   See you at our workshop!
+                    %p
+                      Please remember that removing the calendar entry will not cancel your invitation RSVP.
+
+
 
         .content
           %table{ bgcolor: "#FFFFFF" }
