--- a/app/views/workshops/_workshop_actions.html.haml
+++ b/app/views/workshops/_workshop_actions.html.haml
@@ -14,7 +14,7 @@
     - else
       This workshop is full, but you can join the waiting list.
 
-- if logged_in? && !@workshop.past?
+- if logged_in? && @workshop.future?
   - if @workshop.attendee?(current_user) || @workshop.waitlisted?(current_user)
     = form_tag remove_workshop_path, method: :post do
       - if @workshop.attendee?(current_user)
@@ -39,4 +39,4 @@
 - else
   = link_to "Sign up as a student", new_member_path(role: "student"), class: 'button round expand'
   = link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button round expand'
-  = link_to "Log in with existing account", "/auth/github", class: 'button round expand'#", class: 'button round expand'#", class: 'button round expand'
+  = link_to "Log in with existing account", redirect_path, class: 'button round expand'
