Next iteration of the two-step templates; controller actions to show pages; adapt controller so it can redirect back to either the new page or the standard 'edit' page.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -78,6 +78,10 @@ nav a.menu {
 
 
 .sign-up-wizard {
+  .row.subscriptions {
+    margin-bottom: 2rem;
+  }
+
   label.required abbr {
     display: none;
   }
