Extract out student/coach subscriptions into partials; add JS to hide/show subscriptions.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -82,6 +82,14 @@ nav a.menu {
     margin-bottom: 2rem;
   }
 
+  .subscriptions .collapsed {
+    display: none;
+  }
+
+  .toggle {
+    cursor: pointer;
+  }
+
   label.required abbr {
     display: none;
   }
