--- a/app/views/members/step2.html.haml
+++ b/app/views/members/step2.html.haml
@@ -3,42 +3,15 @@
     .medium-12.columns
       %h1 Pick an invite list
       %p
-        You can register for events on the Codebar site, but it's easier via email. You can
-        join an email list below to receive invites for that location.
+        You can register for events on the Codebar site, but it's easier via email.
+        Join an email list below to receive invites for that location.
 
-  .row.subscriptions
-    .large-6.large-offset-3.columns
-      %h2
-        Coaches
-      - @coach_groups.each do |g|
-        - if belongs_to_group? g
-          = simple_form_for :subscription, url: :destroy_subscriptions, method: :delete do |f|
-            = f.input :subscription_id, as: :hidden, input_html: { value: nil }
-            = f.input :group_id, as: :hidden, input_html: { value: g.id }
-            = button_tag type: :submit, class: 'button expand success round' do
-              %i.fa.fa-check.fa-lg
-              Subscribed to #{g.chapter.name} coach invites
-        - else
-          = simple_form_for :subscription, url: :subscriptions do |f|
-            = f.input :group_id, as: :hidden, input_html: { value: g.id }
-            = f.submit "Subscribe to #{g.chapter.name} coach invites", class: 'button expand warn round'
-
-  .row.subscriptions
-    .large-6.large-offset-3.columns
-      %h2
-        Students
-      - @student_groups.each do |g|
-        - if belongs_to_group? g
-          = simple_form_for :subscription, url: :destroy_subscriptions, method: :delete do |f|
-            = f.input :subscription_id, as: :hidden, input_html: { value: nil }
-            = f.input :group_id, as: :hidden, input_html: { value: g.id }
-            = button_tag type: :submit, class: 'button expand success round' do
-              %i.fa.fa-check.fa-lg
-              Subscribed to #{g.chapter.name} student invites
-        - else
-          = simple_form_for :subscription, url: :subscriptions do |f|
-            = f.input :group_id, as: :hidden, input_html: { value: g.id }
-            = f.submit "Subscribe to #{g.chapter.name} student invites", class: 'button expand warn round'
+  - if current_user.coach?
+    = render partial: 'coach_invite_subscriptions', locals: {groups: @coach_groups, collapsed: false}
+    = render partial: 'student_invite_subscriptions', locals: {groups: @student_groups, collapsed: true}
+  - else
+    = render partial: 'student_invite_subscriptions', locals: {groups: @student_groups, collapsed: false}
+    = render partial: 'coach_invite_subscriptions', locals: {groups: @coach_groups, collapsed: true}
 
   .row
     .large-6.large-offset-3.columns
