--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,7 +11,7 @@
     %link{ href: 'http://fonts.googleapis.com/css?family=Gabriela', rel: 'stylesheet', type: 'text/css' }
     %link{ href: 'http://fonts.googleapis.com/css?family=Cousine:400,700', rel:'stylesheet', type:'text/css'}
     = csrf_meta_tags
-  %body
+  %body.no-js
     .off-canvas-wrap{ "data-offcanvas" => true }
       .inner-wrap
         #top
