--- a/app/views/layouts/_messages.html.haml
+++ b/app/views/layouts/_messages.html.haml
@@ -1,7 +1,8 @@
 - flash.each do |name, msg|
-  - if msg.is_a?(String)
-    - name = name.eql?("notice") ? "info" : name
-    %div{ "data-alert" => '', :class => "alert-box #{name}" }
-      =link_to "#", class: 'close' do
-        &times;
-      = content_tag :div, msg.html_safe
+  - unless (name.eql?("notice") && @suppress_notices) || (name.eql?("warning") && @suppress_warnings)
+    - if msg.is_a?(String)
+      - name = name.eql?("notice") ? "info" : name
+      %div{ "data-alert" => '', :class => "alert-box #{name}" }
+        =link_to "#", class: 'close' do
+          &times;
+        = content_tag :div, msg.html_safe
