Tidy up error display a little; improve copy for coaches.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -82,6 +82,10 @@ nav a.menu {
     margin-bottom: 2rem;
   }
 
+  span.error {
+    margin-top: -17px;
+  }
+
   .toggle {
     cursor: pointer;
   }
