--- a/app/views/admin/workshop/_attendances.html.haml
+++ b/app/views/admin/workshop/_attendances.html.haml
@@ -4,7 +4,10 @@
       .row
         .small-8.medium-8.columns
           =link_to admin_member_path(invitation.member) do
-            =invitation.member.full_name
+            - if invitation.member.full_name.blank?
+              = invitation.member.email
+            - else
+              = invitation.member.full_name
           - if invitation.member.newbie?
             %p
               %em New attendee!
