Brush up the copy on the waiting list reminder email.

--- a/app/views/session_invitation_mailer/waiting_list_reminder.html.haml
+++ b/app/views/session_invitation_mailer/waiting_list_reminder.html.haml
@@ -16,13 +16,14 @@
                 %p.lead
                   This is a quick email to remind you that you're on the waiting list for tomorrow's workshop.
                 %p
-                  If someone drops out, the next person on the waiting list will automatically get a place.
-                  %strong This often happens at short notice,
-                  so you should bring your laptop with you just in case a spot opens up.
+                  If an attendee drops out, the next person on the waiting list will automatically get their place.
+                  We'll email you if this happens.
+                  %strong Attendees often drop out at short notice,
+                  so you should keep your laptop with you and check your email tomorrow afternoon.
                 %p
                   Alternatively, if you know you can no longer make it, you should
                   = link_to "remove yourself from the waiting list", full_url_for(invitation_url(@invitation))
-                  so someone else can come.
+                  so someone else can come to the workshop.
 
 
         .content
