--- a/app/views/workshops/_workshop_actions.html.haml
+++ b/app/views/workshops/_workshop_actions.html.haml
@@ -9,12 +9,14 @@
   - elsif @workshop.waitlisted? current_user
     You're on the waiting list for this event.
   - else
-    - if @workshop.spaces?
+    - if not @workshop.invitable
+      This workshop isn't open for registrations yet.
+    - elsif @workshop.spaces?
       Come along and join us!
     - else
       This workshop is full, but you can join the waiting list.
 
-- if logged_in? && @workshop.future?
+- if logged_in? && @workshop.future? && @workshop.invitable
   - if @workshop.attendee?(current_user)
     - if @workshop.imminent?
       You can't change your RSVP this close to the event. If you can no longer make it,
@@ -45,7 +47,7 @@
         = submit_tag "Attend as a coach", class: 'button round expand'
       - else
         = submit_tag "Join the coach waiting list", class: 'button round expand'
-- else
+- elsif not logged_in?
   = link_to "Sign up as a student", new_member_path(role: "student"), class: 'button round expand'
   = link_to "Sign up as a coach", new_member_path(role: "coach"), class: 'button round expand'
   = link_to "Log in with existing account", redirect_path, class: 'button round expand'
