Display member notes on member page in admin interface.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,6 +2,7 @@
 @import 'partials/events';
 @import 'partials/social_media';
 @import 'partials/chapter';
+@import 'partials/member_note';
 
 section.title {
   background-image: image-url('bg.jpg');
