--- a/app/views/admin/members/show.html.haml
+++ b/app/views/admin/members/show.html.haml
@@ -29,7 +29,7 @@
               #{group.name} (#{group.chapter.name})
   .row
     %hr
-    .medium-12.columns
+    .medium-8.columns
       %h3 Attended workshops
       - @member.session_invitations.attended.each do |invitation|
         .row
@@ -41,4 +41,10 @@
               = humanize_date_with_time(workshop.date_and_time, workshop.time)
           .medium-4.columns
             = invitation.note
+    .medium-4.columns
+      %h3 Member notes (#{@member.member_notes.count})
+      - if @member.member_notes.any?
+        = render partial: "member_note", collection: @member.member_notes
+      - else
+        %em No notes.
 
