Add wording about eligibility to the welcome email. This comes straight from the FAQ.

--- a/app/views/member_mailer/welcome_student.html.haml
+++ b/app/views/member_mailer/welcome_student.html.haml
@@ -12,8 +12,14 @@
   Places are limited, so be sure to respond quickly if you want to attend.
 
 %p
-  Our workshops start with around 30 minutes of socialising and food, before we assign
-  you to a coach with one or two other students. You can either work through
+  Our workshops are available to women, LGBTQ people, and others under-represented
+  in the tech industry. If you belong to one of these groups, you are more than welcome
+  to attend. You can find out more about Codebar's workshops
+  = link_to "in our FAQ.", faq_url
+
+%p
+  Each workshop starts with around 30 minutes of socialising and food, before we assign
+  you to a coach with one to three other students. You can either work through
   = link_to "one of our tutorials", "http://tutorials.codebar.io/"
   or get help with your own project. After 2 hours of coaching, we retire to a nearby
   pub for some post-Codebar relaxation.
