--- a/app/views/dashboard/show.html.haml
+++ b/app/views/dashboard/show.html.haml
@@ -26,7 +26,7 @@
         %hr
         - if @upcoming_workshops.empty?
           %p
-            t("no_upcoming_events")
+            = t("no_upcoming_events")
           %p
             =link_to t("view_past_events"), events_url(anchor: 'past'), class: "button round expand"
 
